--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --bg-color: hsl(220, 18%, 97%);
     --primary-color: #464685da;
-    --secondary-color: #8889c2;
+    --secondary-color: #38396b;
     --font: "Nunito Sans", sans-serif;
 }
 
