--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --bg-color: #1978d162;
     --primary-color: #ffffff;
     --secondary-color: #0448c598;
-    --font: "Nunito Sans", sans-serif;
+    --font: "Serifada", sans-serif;
 }
 
 body {
